# campaigneon

./: .gitignore  README.md  create_tables.sql  pyproject.toml
.devcontainer/: devcontainer.json
auth0/actions/: post-user-registration.js
backend/: Dockerfile  create_tables.sql  pyproject.toml
backend/backend/: create_tables.sql  main.py
backend/backend/auth/: token_verifier.py
backend/backend/db/: campaign_repository.py  category_repository.py  entry_repository.py  job_repository.py  models.py  user_repository.py
backend/backend/graph_ql/: context.py  mutation.py  query.py  subscription.py  types.py
backend/backend/jobs/: background_job_scheduler.py  generate_image_job.py
backend/backend/llm/: llm_service.py
backend/backend/media/: image_repository.py
backend/src/: main.py
backend/src/auth/: requests.py  token_verifier.py
backend/src/db/: campaign_repository.py  entry_repository.py  models.py
backend/src/graph_ql/: context.py  mutation.py  query.py  types.py
backend/src/media/: image_repository.py
frontend/: codegen.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  GraphQlClientProvider.tsx  main.tsx
frontend/src/__generated__/: gql.ts  graphql.ts
frontend/src/components/: TopBar.tsx
frontend/src/components/campaign/: CampaignCard.tsx  CampaignSearchField.tsx  CampaignSelector.tsx  CreateCampaignDialog.tsx
frontend/src/components/common/: AuthGuard.tsx  ImageDialog.tsx  SearchField.tsx  TopBar.css  TopBar.tsx
frontend/src/components/entry/: CreateEntryButton.tsx  CreateEntryDialog.tsx  EntryDescription.tsx  EntryImage.tsx
frontend/src/context/: CampaignContext.tsx
frontend/src/hooks/: graphQlHooks.ts  useFetchCampaign.ts
frontend/src/models/: models.ts
frontend/src/pages/: Campaign.tsx  Entry.tsx  Home.tsx  Page.tsx
frontend/src/pages/campaign/: Campaign.tsx
frontend/src/routes/: routes.tsx
src/: main.py  options.py
src/auth/: user.py
src/db/: campaign_repository.py  category_repository.py  connection_pool.py  db_config.py  entry_repository.py  models.py  user_repository.py
src/graph_ql/: mutation.py  query.py  types.py
